--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@ Accreditation: NAAC A-graded.</p></h4>
 
     <h2>Explore More</h2>
     <ul>
-        <li><a href="1bori.html">About BORI</a></li>
-        <li><a href="1library.html">Library </a></li>
-        <li><a href="1manusscript.html">Manuscripts</a></li>
-        <li><a href="1preser.html">Preservation</a></li>
+        <li><a href="bori.html">About BORI</a></li>
+        <li><a href="library.html">Library </a></li>
+        <li><a href="manuscript.html">Manuscripts</a></li>
+        <li><a href="preser.html">Preservation</a></li>
         <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
 
 </body>
+
 </html>
