--- a/bori.html
+++ b/bori.html
@@ -25,5 +25,6 @@ The institute has one of the largest collections of rare books and manuscripts i
  the Rigveda manuscripts preserved at the Institute were included in UNESCO's Memory of the World Register.[2][3]</p>
 
 
-  <li><a href="1index.html">Back to Home</a></li>
-        <li><a href="1library.html">Library </a></li>
+  <li><a href="index.html">Back to Home</a></li>
+
+        <li><a href="library.html">Library </a></li>
