--- a/manuscript.html
+++ b/manuscript.html
@@ -36,9 +36,10 @@ Among the several scholars referring to the works at BORI, the most well-known p
  Pt. Pandurang Vaman Kane.[4]</p>
 
 
-    <a href="1index.html">Back to Home</a><br>
-    <a href="1preser.html">Preservation</a>
+    <a href="index.html">Back to Home</a><br>
+    <a href="preser.html">Preservation</a>
 
 </body>
+
 
 </html>
