--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Accreditation: NAAC A-graded.</p></h4>
 
 
     <h2>Our College & Group</h2>
-    <img src= "C:\Users\DELL\Desktop\iks\MIT.png"alt="MIT ACSC College" width="400">
+    <img src= "MIT.png"alt="MIT ACSC College" width="400">
     <img src="C:\Users\DELL\Desktop\iks\GRP.jpg" alt="Group Photo" width="400">
 
     <h2>Explore More</h2>
@@ -45,4 +45,5 @@ Accreditation: NAAC A-graded.</p></h4>
 </body>
 
 </html>
+
 
