--- a/bori.html
+++ b/bori.html
@@ -13,8 +13,8 @@
 
 
     <h1>Bhandarkar Oriental Research Institute</h1>
-    <img src="C:\Users\DELL\Desktop\iks\BORI.png" alt="Bhandarkar Institute" width="400">
-    <img src="C:\Users\DELL\Desktop\iks\bori2.jpg" alt="bori"width="400">
+    <img src="BORI.png" alt="Bhandarkar Institute" width="400">
+    <img src="bori2.jpg" alt="bori"width="400">
  <p>This institute is of a public trust registered under Act XXI of 1860. Initially, the institute received an annual grant of 3,000 rupees from the government of Bombay.
     Presently, it is partially supported by annual grants from the government of Maharashtra. The institute also receives grants from the government of India and the University Grants Commission for specific research projects.
 
@@ -28,3 +28,4 @@ The institute has one of the largest collections of rare books and manuscripts i
   <li><a href="index.html">Back to Home</a></li>
 
         <li><a href="library.html">Library </a></li>
+
