--- a/conclusion.html
+++ b/conclusion.html
@@ -5,7 +5,8 @@
        <H2 ALIGN="CENTER">~<U>CONCLUSION</U>:<BR>The IKS project preserves manuscripts and traditional knowledge through digitization, while data science enables 
         analysis, restoration, and wider access to this ancient wisdom for modern research.</H2></I>
         <br><br><br>
-        <center><a href="index.html"><img src="C:\Users\DELL\Desktop\iks\con1.jpg"></a></center>
+        <center><a href="index.html"><img src="con1.jpg"></a></center>
     </body>
 
 </html>
+
