--- a/conclusion.html
+++ b/conclusion.html
@@ -5,9 +5,10 @@
        <H2 ALIGN="CENTER">~<U>CONCLUSION</U>:<BR>The IKS project preserves manuscripts and traditional knowledge through digitization, while data science enables 
         analysis, restoration, and wider access to this ancient wisdom for modern research.</H2></I>
         <br><br><br>
-        <center><a href="index.html"><img src="con1.jpg">alt=thanks width="400"</a></center>
+        <center><a href="index.html"><img src="con1.jpg"alt=thanks width="400"></a></center>
     </body>
 
 </html>
+
 
 
