--- a/library.html
+++ b/library.html
@@ -17,8 +17,8 @@
            its role in preserving priceless historical documents, including birch bark manuscripts and ancient texts. 
     </p>
 
-    <img src="C:\Users\DELL\Desktop\iks\lib2.jpg" alt="Library Books" width="400">
-    <img src="C:\Users\DELL\Desktop\iks\iks5.jpg" alt="Library Books" width="400">
+    <img src="lib2.jpg" alt="Library Books" width="400">
+    <img src="iks5.jpg" alt="Library Books" width="400">
 
 <P>The "BORI Library" refers to the Dr. R. N. Dandekar Library at the Bhandarkar Oriental Research Institute (BORI) in Pune, known internationally as a leading specialized library for Oriental Studies. It houses over 138,000 books and 28,000 rare manuscripts in various Indian and European languages, with a focus on Sanskrit and Prakrit literature. Founded with a donation of books by Sir Ramakrishna Gopal Bhandarkar, the library's collection has grown significantly through donations from other scholars and its role in preserving priceless historical documents, including birch bark manuscripts and ancient texts. </P>
 
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
