--- a/manuscript.html
+++ b/manuscript.html
@@ -25,8 +25,8 @@
 
     </p>
 
-    <img src="C:\Users\DELL\Desktop\iks\manu2.jpg" alt="Manuscript" width="400">
-    <img src="C:\Users\DELL\Desktop\iks\manu3.jpg" alt="Manuscript Display" width="400">
+    <img src="manu2.jpg" alt="Manuscript" width="400">
+    <img src="manu3.jpg" alt="Manuscript Display" width="400">
 
 <p>The largest part of the collection (17,877 Manuscripts) is part of the "Government Manuscript Library",
      while there is an additional collection of 11,633 manuscripts. The most prized collections include a 
@@ -43,3 +43,4 @@ Among the several scholars referring to the works at BORI, the most well-known p
 
 
 </html>
+
